# hobot_bev

./: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
config/bev_ipm_base/: bev_ipm_base_config.json
config/bev_ipm_base/bev_test_img_lists/: cam_back.list  cam_back_left.list  cam_back_right.list  cam_front.list  cam_front_left.list  cam_front_right.list
include/: bev_data.h  bev_node.h  jsonutil.h  preprocess.h  render.h
include/postprocess/: detect_3dbox_postprocess.h  detect_base_postprocess.h  postprocess.h  segment_postprocess.h
launch/: hobot_bev.launch.py
src/: bev_node.cpp  main.cpp  preprocess.cpp  render.cpp
src/postprocess/: detect_3dbox_postprocess.cpp  postprocess.cpp  segment_postprocess.cpp
